fixed navbar shift everytime page reloads

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -9,6 +9,12 @@
 #myProfile button {
 	margin-top: 20px;
 }
+
+.notify {
+	display:inline-block;
+	min-width:30px;
+}
+
 .pad {
 	padding-top: 45px;
 }
@@ -16,9 +22,8 @@
 	margin-bottom:  0px;
 }
 .user {
-		color:#325d88;
-
-		text-align: right;;
+	color:#325d88;
+	text-align: right;;
 }
 .other {
 	color:black;
